# nadylib

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config
.github/workflows/: build.yml  docker.yml
aochatproxy/: Cargo.toml
aochatproxy/src/: config.rs  main.rs  worker.rs
data/: mmdb.json
examples/: chat_client.rs  chat_notice.rs  packet_log.rs
nadylib/: Cargo.toml
nadylib/src/: client_socket.rs  crypto.rs  error.rs  lib.rs  mmdb.rs  mmdb_parser.rs  models.rs  packets.rs
src/: account.rs  bot.rs  client_socket.rs  crypto.rs  error.rs  formatter.rs  lib.rs  mmdb.rs  mmdb_parser.rs  models.rs  packets.rs  sync_client_socket.rs
src/mmdb/: db.rs  generate.py  generated.rs
