[package]
name = "nadylib"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
byteorder = "1.4"
leaky-bucket-lite = { version = "0.3", default-features = false }
log = "0.4"
num-bigint = { version = "0.4", default-features = false }
num-traits = "0.2"
getrandom = "0.2"
stop-thread = { version = "0.2", default-features = false, optional = true }
tokio = { version = "1.2", default-features = false, features = [
    "net",
    "rt",
    "io-util",
    "time",
    "sync"
], optional = true }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.2", default-features = false, features = [
    "net",
    "rt",
    "io-util",
    "time",
    "sync",
    "rt-multi-thread",
    "macros"
] }

[features]
default = ["async"]
mmdb-parser = []
mmdb = []
test-server = []
sync = ["leaky-bucket-lite/sync", "stop-thread"]
async = ["tokio", "leaky-bucket-lite/tokio"]
