[package]
name = "nadylib"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
byteorder = "1.4"
leaky-bucket-lite = { version = "0.5", default-features = false }
log = "0.4"
num-bigint = { version = "0.4", default-features = false }
num-traits = "0.2"
getrandom = "0.2"
stop-thread = { version = "0.2", default-features = false, optional = true }
tokio = { version = "1.2", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "io-util",
    "time",
    "sync"
], optional = true }
# Account management
hyper = { version = "0.14", default-features = false, features = [
    "client",
    "http1",
    "http2",
], optional = true }
hyper-proxy = { git = "https://github.com/Gelbpunkt/hyper-proxy", default-features = false, features = [
    "rustls-webpki"
], optional = true }
hyper-rustls = { version = "0.23", default-features = false, features = [
    "http1",
    "http2",
    "tls12",
    "webpki-roots",
    "tokio-runtime"
], optional = true }
cookie = { version = "0.16", optional = true }
cookie_store = { version = "0.19", optional = true }
serde_json = { version = "1", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
url = { version = "2.3", optional = true }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.2", default-features = false, features = [
    "net",
    "rt",
    "io-util",
    "time",
    "sync",
    "rt-multi-thread",
    "macros"
] }

[features]
default = ["async"]
account-management = [
    "hyper",
    "hyper-proxy",
    "hyper-rustls",
    "cookie",
    "cookie_store",
    "serde_json",
    "serde_urlencoded",
    "url"
]
mmdb-parser = []
mmdb = []
parking_lot = ["leaky-bucket-lite/parking_lot"]
test-server = []
sync = ["leaky-bucket-lite/sync-threadsafe", "stop-thread"]
async = ["tokio", "leaky-bucket-lite/tokio"]
