[package]
name = "aochatproxy"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0.0-rc.6"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
nadylib = { path = "../nadylib" }
tokio = { version = "0.3", default-features = false, features = ["macros", "rt-multi-thread"] }
