[package]
name = "nadylib"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
lazy_static = "1.4"
num-bigint = { version = "0.3", features = ["rand"] }
num-traits = "0.2"
num_enum = "0.5"
rand = "0.7"
regex = { version = "1.4", default-features = false, features = ["std", "unicode-perl"] }
serde_json = "1.0"
strfmt = "0.1"
tokio = { version = "0.3", default-features = false, features = ["net", "rt", "io-util", "time", "sync"] }

[features]
default = []
mmdb-parser = []
